# SeeDataStructure

./: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  SeeDataStructure.pro  SeeDataStructure.pro.user.0a70565  SeeDataStructure.pro.user.22  SeeDataStructureRc.qrc  SeerAboutDialog.cpp  SeerAboutDialog.h  SeerAboutDialog.ui  SeerArgumentsDialog.cpp  SeerArgumentsDialog.h  SeerArgumentsDialog.ui  SeerRunStatusIndicator.cpp  SeerRunStatusIndicator.h  SeerSlashProcDialog.cpp  SeerSlashProcDialog.h  SeerSlashProcDialog.ui  keysettings.cpp  keysettings.h  main.cpp  object_script.SeeDataStructure.Debug  object_script.SeeDataStructure.Release  sdsmainwindow.cpp  sdsmainwindow.h  sdsmainwindow.ui  ui_LogWidget.h  ui_QProcessInfoWidget.h  ui_SeerAboutDialog.h  ui_SeerArgumentsDialog.h  ui_SeerArrayVisualizerWidget.h  ui_SeerBreakpointCreateDialog.h  ui_SeerBreakpointsBrowserWidget.h  ui_SeerBreakpointsOptionsBarWidget.h  ui_SeerCatchpointCreateDialog.h  ui_SeerCatchpointsBrowserWidget.h  ui_SeerCloseSourceDialog.h  ui_SeerConfigDialog.h  (+38 more)
BaseDebug/: LogWidget.cpp  LogWidget.h  LogWidget.ui  SeerBreakpointCreateDialog.cpp  SeerBreakpointCreateDialog.h  SeerBreakpointCreateDialog.ui  SeerBreakpointsBrowserWidget.cpp  SeerBreakpointsBrowserWidget.h  SeerBreakpointsBrowserWidget.ui  SeerBreakpointsOptionsBarWidget.cpp  SeerBreakpointsOptionsBarWidget.h  SeerBreakpointsOptionsBarWidget.ui  SeerCatchpointCreateDialog.cpp  SeerCatchpointCreateDialog.h  SeerCatchpointCreateDialog.ui  SeerCatchpointsBrowserWidget.cpp  SeerCatchpointsBrowserWidget.h  SeerCatchpointsBrowserWidget.ui  SeerDebugDialog.cpp  SeerDebugDialog.h  SeerDebugDialog.ui  SeerDirectoryFilterProxyModel.h  SeerExecutableFilterProxyModel.h  SeerFunctionBrowserWidget.cpp  SeerFunctionBrowserWidget.h  SeerFunctionBrowserWidget.ui  SeerLibraryBrowserWidget.cpp  SeerLibraryBrowserWidget.h  SeerLibraryBrowserWidget.ui  SeerSourceBrowserWidget.cpp  SeerSourceBrowserWidget.h  SeerSourceBrowserWidget.ui  SeerSourceLibraryManagerWidget.cpp  SeerSourceLibraryManagerWidget.h  SeerSourceLibraryManagerWidget.ui  SeerTildeLogWidget.cpp  SeerTildeLogWidget.h  SeerWatchpointCreateDialog.cpp  SeerWatchpointCreateDialog.h  SeerWatchpointCreateDialog.ui  (+3 more)
Editor/: SeerCloseSourceDialog.cpp  SeerCloseSourceDialog.h  SeerCloseSourceDialog.ui  SeerCppSourceHighlighter.cpp  SeerCppSourceHighlighter.h  SeerEditorManagerEntry.h  SeerEditorManagerWidget.cpp  SeerEditorManagerWidget.h  SeerEditorManagerWidget.ui  SeerEditorOptionsBarWidget.cpp  SeerEditorOptionsBarWidget.h  SeerEditorOptionsBarWidget.ui  SeerEditorWidget.cpp  SeerEditorWidget.h  SeerEditorWidget.ui  SeerEditorWidgetBreakPointArea.cpp  SeerEditorWidgetLineNumberArea.cpp  SeerEditorWidgetMiniMapArea.cpp  SeerEditorWidgetSourceArea.cpp  SeerHighlighterSettings.cpp  SeerHighlighterSettings.h  SeerTypeBrowserWidget.cpp  SeerTypeBrowserWidget.h  SeerTypeBrowserWidget.ui
GdbCtrl/: gdbconfigpage.cpp  gdbconfigpage.h  gdbconfigpage.ui  gdblogwidget.cpp  gdblogwidget.h  gdbmonitor.cpp  gdbmonitor.h  gdbwidget.cpp  gdbwidget.h  gdbwidget.ui
Stack/: SeerStackArgumentsBrowserWidget.cpp  SeerStackArgumentsBrowserWidget.h  SeerStackArgumentsBrowserWidget.ui  SeerStackFramesBrowserWidget.cpp  SeerStackFramesBrowserWidget.h  SeerStackFramesBrowserWidget.ui  SeerStackLocalsBrowserWidget.cpp  SeerStackLocalsBrowserWidget.h  SeerStackLocalsBrowserWidget.ui  SeerStackManagerWidget.cpp  SeerStackManagerWidget.h  SeerStackManagerWidget.ui
Thread/: SeerThreadFramesBrowserWidget.cpp  SeerThreadFramesBrowserWidget.h  SeerThreadFramesBrowserWidget.ui  SeerThreadIdsBrowserWidget.cpp  SeerThreadIdsBrowserWidget.h  SeerThreadIdsBrowserWidget.ui  SeerThreadManagerWidget.cpp  SeerThreadManagerWidget.h  SeerThreadManagerWidget.ui
Variable/: SeerRegisterValuesBrowserWidget.cpp  SeerRegisterValuesBrowserWidget.h  SeerRegisterValuesBrowserWidget.ui  SeerVariableBrowserWidget.cpp  SeerVariableBrowserWidget.h  SeerVariableBrowserWidget.ui  SeerVariableLoggerBrowserWidget.cpp  SeerVariableLoggerBrowserWidget.h  SeerVariableLoggerBrowserWidget.ui  SeerVariableManagerWidget.cpp  SeerVariableManagerWidget.h  SeerVariableManagerWidget.ui  SeerVariableTrackerBrowserWidget.cpp  SeerVariableTrackerBrowserWidget.h  SeerVariableTrackerBrowserWidget.ui
cfgpage/: SeerConfigDialog.cpp  SeerConfigDialog.h  SeerConfigDialog.ui  SeerEditorConfigPage.cpp  SeerEditorConfigPage.h  SeerEditorConfigPage.ui  SeerKeysConfigPage.cpp  SeerKeysConfigPage.h  SeerKeysConfigPage.ui  SeerSeerConfigPage.cpp  SeerSeerConfigPage.h  SeerSeerConfigPage.ui  SeerSourceConfigPage.cpp  SeerSourceConfigPage.h  SeerSourceConfigPage.ui
debug/: moc_LogWidget.cpp  moc_QDetachTabWidget.cpp  moc_QProcessInfoWidget.cpp  moc_QProgressIndicator.cpp  moc_Qcolorbutton.cpp  moc_SeerAboutDialog.cpp  moc_SeerArgumentsDialog.cpp  moc_SeerArrayVisualizerWidget.cpp  moc_SeerArrayWidget.cpp  moc_SeerBreakpointCreateDialog.cpp  moc_SeerBreakpointsBrowserWidget.cpp  moc_SeerBreakpointsOptionsBarWidget.cpp  moc_SeerCatchpointCreateDialog.cpp  moc_SeerCatchpointsBrowserWidget.cpp  moc_SeerCloseSourceDialog.cpp  moc_SeerConfigDialog.cpp  moc_SeerCppSourceHighlighter.cpp  moc_SeerDebugDialog.cpp  moc_SeerEditorConfigPage.cpp  moc_SeerEditorManagerWidget.cpp  moc_SeerEditorOptionsBarWidget.cpp  moc_SeerEditorWidget.cpp  moc_SeerFunctionBrowserWidget.cpp  moc_SeerKeysConfigPage.cpp  moc_SeerLibraryBrowserWidget.cpp  moc_SeerMemoryVisualizerWidget.cpp  moc_SeerRegisterValuesBrowserWidget.cpp  moc_SeerRunStatusIndicator.cpp  moc_SeerSeerConfigPage.cpp  moc_SeerSlashProcDialog.cpp  moc_SeerSourceBrowserWidget.cpp  moc_SeerSourceConfigPage.cpp  moc_SeerSourceLibraryManagerWidget.cpp  moc_SeerStackArgumentsBrowserWidget.cpp  moc_SeerStackFramesBrowserWidget.cpp  moc_SeerStackLocalsBrowserWidget.cpp  moc_SeerStackManagerWidget.cpp  moc_SeerThreadFramesBrowserWidget.cpp  moc_SeerThreadIdsBrowserWidget.cpp  moc_SeerThreadManagerWidget.cpp  (+19 more)
myQT/: QDetachTabWidget.cpp  QDetachTabWidget.h  QProcessInfo.cpp  QProcessInfo.h  QProcessInfoWidget.cpp  QProcessInfoWidget.h  (+9 more)
(+35 files in other folders)
